tests/pos/i13046/A.java
interface A {
    public boolean override();
}
