tests/neg/i3012/Fuzbar.java
package fuz;
public interface Fuzbar {
  public String str();
}